--- a/frontend/css/reservation.css
+++ b/frontend/css/reservation.css
@@ -1,7 +1,7 @@
 #tableSpace {
     background: white;
     padding-top: 10px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 .reserveTable {
@@ -9,6 +9,7 @@
     margin: auto;
     height: 100%;
     max-width: 22%;
+    cursor: pointer;
 }
 
 #rtb1 {
@@ -71,4 +72,81 @@
 
 #personalDataInputContainer {
     display: none;
+}
+
+#numberSeats {
+    cursor: pointer;
+}
+
+#timePicker {
+    height: 50px;
+    padding: 0 20px;
+    display: inline-flex;
+    overflow: hidden;
+
+    background: rgb(226,226,226); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(226,226,226,1) 0%, rgba(219,219,219,1) 50%, rgba(209,209,209,1) 51%, rgba(254,254,254,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(226,226,226,1) 0%,rgba(219,219,219,1) 50%,rgba(209,209,209,1) 51%,rgba(254,254,254,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', endColorstr='#fefefe',GradientType=0 ); /* IE6-9 */
+}
+
+#timePickerScrollable {
+    display: inline-flex;
+    position: absolute;
+}
+
+.timePickerItem {
+    text-align: center;
+    border: 1px solid gray;
+    color: black;
+    float: left;
+    width: 40px;
+    margin-right: -1px;
+    cursor: pointer;
+}
+
+.timePickerItem:hover {
+    background: #f85131;
+}
+
+#future {
+    z-index: 10;
+    position: absolute;
+    right: 0;
+    border: 1px solid black;
+    color: black;
+    background: #f85131;
+    background-image: url(../images/icon-right.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    position: absolute;
+    height: 50px;
+    width: 20px;
+    box-shadow: -1px 0px 4px black;
+    cursor: pointer;
+}
+
+#past {
+    z-index: 10;
+    position: absolute;
+    left: 0;
+    border: 1px solid black;
+    color: black;
+    background: #f85131;
+    background-image: url(../images/icon-left.png);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 20px;
+    box-shadow: 1px 0px 4px black;
+    cursor: pointer;
+}
+
+.vl {
+    border-left: 5px solid green;
+    height: 100%;
 }
